# hotfish

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/: architecture.txt  protocols.txt  types.txt
src/core/: CMakeLists.txt  HFArray.h  HFContainer.h  HFObject.c  HFObject.h  HfObject.c  HfObject.h  HotFish.h  hf-mem.c  hotfish-array.h  hotfish-container.h  hotfish-object.c  hotfish-object.h
tests/: CMakeLists.txt
tests/object/: CMakeLists.txt  main.c
